--- a/src/main/resources/templates/nuevos/nuevoPlato.html
+++ b/src/main/resources/templates/nuevos/nuevoPlato.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head::encabezado(~{::title}, ~{::link})}">
   <meta charset="UTF-8">
-  <title>Nuevo Menú</title>
+  <title>Nuevo Plato</title>
   <link rel="stylesheet" th:href="@{/css/nuevoMenu.css}">
 </head>
 <body>
